added section with slider, will need to be completed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,3 +11,4 @@
 @use "/src/sass/blocks/header.scss";
 @use "/src/sass/blocks/activities.scss";
 @use "/src/sass/blocks/form.scss";
+@use "/src/sass/blocks/work.scss";
