--- a/src/sass/blocks/form.scss
+++ b/src/sass/blocks/form.scss
@@ -61,6 +61,7 @@
         padding: 10px 15px;
         color: $dark;
         border: 1px solid #e2e1e5;
+        border-radius: 2px;
         background: #fff;
         resize: none;
 
