--- a/src/sass/blocks/work.scss
+++ b/src/sass/blocks/work.scss
@@ -2,27 +2,32 @@
 
 .works {
     padding-top: 60px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
+
+    &__slider-wrapper {
+        position: relative;
+    }
 
     &__slider {
         margin-top: 40px;
-        padding-bottom: 45px;
     }
 
     .swiper-slide img {
         width: 100%;
     }
 
-    .swiper-button-prev,
-    .swiper-button-next {
+    &__slider-nav {
         display: none;
+        cursor: pointer;
     }
 
     .swiper-pagination {
-        bottom: 0;
+        position: absolute;
+        bottom: -45px;
     }
 
     .swiper-pagination-bullet {
+        margin: 0 6px !important;
         width: 10px;
         height: 10px;
         border-radius: 0;
@@ -33,5 +38,72 @@
 
     .swiper-pagination-bullet-active {
         background-color: $Ceramic;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .works {
+        &__slider {
+            margin-top: 45px;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 400px;
+            margin: 0 auto;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .works {
+
+        &__slider-wrapper {
+            position: relative;
+        }
+
+        &__slider {
+            margin: 80px 40px 0 40px;
+        }
+
+        .swiper-slide img {
+            width: 100%;
+            margin: 0;
+
+        }
+
+        &__slider-nav {
+            display: block;
+            font-size: 21px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .icon-left-open {
+            left: 0;
+        }
+
+        .icon-right-open {
+            right: 0;
+        }
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    .works {
+        padding: 100px 0;
+
+        &__slider {
+            margin: 80px 85px 0 85px;
+        }
+
+        .icon-left-open {
+            left: 40px;
+        }
+
+        .icon-right-open {
+            right: 40px;
+        }
     }
 }
