added section -footer-, and 'burger' menu in header for mobile device, and all of this is adapted for mobile devices

--- a/src/sass/blocks/form.scss
+++ b/src/sass/blocks/form.scss
@@ -30,9 +30,10 @@
         font-weight: 400;
         line-height: 28px;
 
-        &:nth-child(2) {
-            margin-top: 8px;
-        }
+    }
+
+    .mt-8 {
+        margin-top: 8px;
     }
 
     &__input {
