--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -32,6 +32,61 @@
     &__nav {
         display: none;
     }
+
+    &__menu {
+        padding: 50px 10px;
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        width: 100vw;
+        height: 100vh;
+        background-color: $light;
+        transition: all .5s;
+
+        &-active {
+            transform: translateX(100%);
+        }
+
+        &-close {
+            width: 20px;
+            height: 20px;
+
+            span {
+                display: block;
+                width: 20px;
+                height: 1px;
+                background-color: $dark;
+
+                &:nth-child(1) {
+                    transform: translateY(8px) rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    transform: translateY(8px) rotate(-45deg);
+                }
+            }
+        }
+
+        &-nav {
+            margin-top: 50px;
+            padding-left: 14px;
+
+            ul {
+                display: flex;
+                flex-direction: column;
+                row-gap: 25px;
+                padding: 0;
+                list-style-type: none;
+            }
+        }
+
+        &-link {
+            color: $dark;
+            font-size: 20px;
+            line-height: 24px;
+            text-transform: uppercase;
+        }
+    }
 }
 
 .burger {
@@ -73,6 +128,10 @@
             font-weight: 400;
             line-height: 24px;
             text-transform: uppercase;
+        }
+
+        &__menu {
+            display: none;
         }
     }
 
