--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,4 @@
 @use "/src/sass/blocks/activities.scss";
 @use "/src/sass/blocks/form.scss";
 @use "/src/sass/blocks/work.scss";
+@use "/src/sass/blocks/footer.scss";
