--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -27,6 +27,23 @@
     }
 }
 
+.btn-submit {
+    @include button;
+    width: 90px;
+    height: 40px;
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 20px;
+    border: 1px solid #fff;
+    color: #fff;
+
+    &:disabled {
+        color: $ui-disabled;
+        outline: 1px solid $ui-disabled;
+        border: none;
+    }
+}
+
 @media screen and (min-width: 1920px) {
     .btn-default {
         width: 330px;
