--- a/src/sass/ui/titles.scss
+++ b/src/sass/ui/titles.scss
@@ -19,6 +19,16 @@
     font-size: 20px;
 }
 
+.title-footer-h4 {
+    @include title;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19px;
+    text-align: left;
+    color: $light;
+    margin-bottom: 40px;
+}
+
 @media screen and (min-width: 768px) {
     .title-h2 {
         font-size: 36px;
