--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -93,7 +93,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    padding-right: 35px;
+    margin-right: 35px;
     height: 23px;
 
     span {
