--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,9 +7,11 @@
 @use "/src/sass/ui/titles.scss";
 @use "/src/sass/ui/buttons.scss";
 
-@use "/src/sass/blocks/promo.scss";
 @use "/src/sass/blocks/header.scss";
+@use "/src/sass/blocks/footer.scss";
+
+@use "/src/sass/blocks/promo.scss";
 @use "/src/sass/blocks/activities.scss";
 @use "/src/sass/blocks/form.scss";
 @use "/src/sass/blocks/work.scss";
-@use "/src/sass/blocks/footer.scss";
+@use "/src/sass/blocks/catalog.scss";
