--- a/src/sass/ui/titles.scss
+++ b/src/sass/ui/titles.scss
@@ -7,6 +7,7 @@
     font-style: italic;
 }
 
+.title-h1,
 .title-h2 {
     @include title;
     font-weight: 500;
@@ -30,6 +31,8 @@
 }
 
 @media screen and (min-width: 768px) {
+
+    .title-h1,
     .title-h2 {
         font-size: 36px;
     }
@@ -40,6 +43,8 @@
 }
 
 @media screen and (min-width: 1200px) {
+
+    .title-h1,
     .title-h2 {
         font-size: 40px;
     }
