--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -42,6 +42,7 @@
         height: 100vh;
         background-color: $light;
         transition: all .5s;
+        z-index: 10;
 
         &-active {
             transform: translateX(100%);
