--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,3 +15,4 @@
 @use "/src/sass/blocks/form.scss";
 @use "/src/sass/blocks/work.scss";
 @use "/src/sass/blocks/catalog.scss";
+@use "/src/sass/blocks/blog.scss";
