--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -1,7 +1,7 @@
 @use "/src/sass/base/variables.scss" as *;
 
 .catalog {
-    padding: 50px 0 60px 0;
+    padding: 50px 0 0 0;
 
     &__title {
         margin-top: 60px;
