--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,6 +1,7 @@
 @use "/src/sass/base/variables.scss" as *;
 
 .footer {
+    margin-top: 60px;
     padding: 50px 0;
     background-color: $dark;
     color: $light;
@@ -118,6 +119,7 @@
 
 @media screen and (min-width: 1920px) {
     .footer {
+        margin-top: 100px;
         padding: 80px 0 51px 0;
 
         &__wrap {
