--- a/src/sass/blocks/work.scss
+++ b/src/sass/blocks/work.scss
@@ -2,7 +2,7 @@
 
 .works {
     padding-top: 60px;
-    padding-bottom: 105px;
+    padding-bottom: 40px;
 
     &__slider-wrapper {
         position: relative;
@@ -96,7 +96,7 @@
 
 @media screen and (min-width: 1920px) {
     .works {
-        padding: 140px 0;
+        padding-top: 100px;
 
         &__slider {
             margin: 80px 85px 0 85px;
